# PacketAnalyzerAndroid

./: .gitmodules  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/packet/analyzer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  socket_jni.c
app/src/main/java/com/packet/analyzer/: MainActivity.kt  PacketAnalyzerApp.kt
app/src/main/java/com/packet/analyzer/data/datasource/: PcapdDataSource.kt
app/src/main/java/com/packet/analyzer/data/model/: AppInfo.kt  AppSessionTrafficData.kt  PcapHeaderInfo.kt
app/src/main/java/com/packet/analyzer/data/repository/: TrafficRepository.kt  TrafficRepositoryImpl.kt
app/src/main/java/com/packet/analyzer/data/util/: Constants.kt
app/src/main/java/com/packet/analyzer/di/: AppModule.kt
app/src/main/java/com/packet/analyzer/ui/components/: AppListItem.kt  AppTrafficChartView.kt  BottomNavigationBar.kt  ScreenHeader.kt
app/src/main/java/com/packet/analyzer/ui/navigation/: AppNavigation.kt
app/src/main/java/com/packet/analyzer/ui/screens/: AppDetailsScreen.kt  AppListScreen.kt  CaptureControlScreen.kt  SettingsScreen.kt
app/src/main/java/com/packet/analyzer/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/packet/analyzer/util/: FormatUtils.kt
app/src/main/res/drawable/: ic_overall_traffic.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-ru/: strings.xml
app/src/test/java/com/packet/analyzer/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+8 files in other folders)
